force-app/main/default/objects/Table_Booking__c/Table_Booking__c.object-meta.xml
<CustomObject>
    <label>Table Booking</label>
    <nameField>
        <displayFormat>Auto Number TB-{0000}</displayFormat>
        <label>Table Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Table Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>