force-app/main/default/objects/Table_Booking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Table Bookings</relationshipLabel>
    <relationshipName>Table_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>