force-app/main/default/objects/Table_Booking__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>