force-app/main/default/objects/Table_Booking__c/fields/Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Request__c</fullName>
    <label>Special Request</label>
    <type>TextArea</type>
</CustomField>