force-app/main/default/objects/Table_Booking__c/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <label>Table Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>