force-app/main/default/objects/Table_Booking__c/validationRules/Booking_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), Booking_Date_Time__c &lt; NOW())</errorConditionFormula>
    <errorMessage>Booking time must be in the future.</errorMessage>
</ValidationRule>