force-app/main/default/objects/Table_Booking__c/validationRules/Guests_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Guests_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Guests__c &lt; 1, Guests__c &gt; 20)</errorConditionFormula>
    <errorMessage>Guests must be between 1 and 20.</errorMessage>
</ValidationRule>